# Ivt_snak

./: Cargo.toml  index.html
pkg/: snake.d.ts  snake.js  snake_bg.wasm  snake_bg.wasm.d.ts
src/: lib.rs  snake.rs
