[package]
name = "snake"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.web-sys]
version = "0.3.57"
features = [
  "Document", "Element", "HtmlElement", "Window", "console",
  "CssStyleDeclaration", "HtmlDivElement", "KeyboardEvent"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.86"
js-sys = "0.3.63"
futures = "0.3.28"
futures-cpupool = "0.1.8"
hyper = "0.14.26"
clap = "4.3.2"
threadpool = "1.8.1"
net2 = "0.2.38"
libc = "0.2.146"
error-type = "0.1.2"

